Bug 56459 - journalctl doesn't follow empty logs in verbose modes but exits with an error message
Summary: journalctl doesn't follow empty logs in verbose modes but exits with an error...
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: systemd-bugs
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-27 12:04 UTC by Felix
Modified: 2013-06-11 05:15 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Felix 2012-10-27 12:04:51 UTC
Hello,

I'm running systemd-195 on ArchLinux. When starting journalctl in a verbose follow mode on an empty log it immediately exits with an error message:

$ journalctl -o verbose -f _EXE=/quiet/binary
-- Logs begin at Wed, 2012-10-24 06:32:32 CEST. --
Failed to get realtime timestamp: Cannot assign requested address

Since the given binary could be a daemon that's currently not running but is going to be started later, I would expect journalctl to wait for messages to appear (as specified in the manual).

Note that the expected behaviour is achieved in the "short" and "short-monotonic" output modes. Using another output mode results in the above error message.

Cheers,
  Felix
Comment 1 Zbigniew Jedrzejewski-Szmek 2013-06-10 02:46:02 UTC
Fixed in http://cgit.freedesktop.org/systemd/systemd/commit/?id=a72b635. Please test.
Comment 2 Felix 2013-06-11 05:15:39 UTC
Thanks for the notice. However, I cannot test the patch right now because I'm running a productive system – but I'm looking forward to the upgrade.

Cheers,
  Felix


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.